@@ -4,6 +4,7 @@ import com.engine.Evolvable;
 import com.engine.utils.Vector3;
 import com.game.controllers.Controller;
 import com.game.monsters.Monster;
+import com.game.particles.Particle;
 import com.game.tiles.Tile;
 import com.game.tiles.TileType;
 import com.game.tiles.VoidTile;
@@ -30,7 +31,9 @@ public class Maze implements Evolvable {
     /** The monsters of the maze. */
     private Monster[] monsters;
     /** The items of the maze. */
-    private Item[] items;
+    private WorldItem[] items;
+    /** The particles of the maze. */
+    private Particle[] particles;
     /** Spawnpoint for the player. */
     private Vector3 spawnPoint;
     /** Temporary entities (only drew for the current frame). */
@@ -46,6 +49,8 @@ public class Maze implements Evolvable {
     public Maze() {
         this.width = 1;
         this.height = 1;
+        this.particles = new Particle[0];
+
     }
 
     /**
@@ -61,6 +66,8 @@ public class Maze implements Evolvable {
         this.height = h;
         this.depth = d;
         this.tiles = new Tile[w * h * d];
+        this.particles = new Particle[0];
+
     }
 
     /**
@@ -81,8 +88,9 @@ public class Maze implements Evolvable {
         this.depth = d;
         this.tiles = t;
         this.monsters = new Monster[0];
-        this.items = new Item[0];
+        this.items = new WorldItem[0];
         this.setTilesDefaultPositions();
+        this.particles = new Particle[0];
     }
 
     /**
@@ -97,6 +105,7 @@ public class Maze implements Evolvable {
     public Maze(int w, int h, int d, Tile[] t, Vector3 spawn) {
         this(w, h, d, t);
         this.spawnPoint = spawn;
+        this.particles = new Particle[0];
     }
 
     /**
@@ -110,7 +119,7 @@ public class Maze implements Evolvable {
      * @param m The monsters of the maze.
      * @param i The items of the maze.
      */
-    public Maze(int w, int h, int d, Tile[] t, Monster[] m, Item[] i) {
+    public Maze(int w, int h, int d, Tile[] t, Monster[] m, WorldItem[] i) {
         if (t.length != w * h * d) {
             throw new IllegalArgumentException("The number of tiles must be equal to width * height * depth.");
         }
@@ -120,6 +129,7 @@ public class Maze implements Evolvable {
         this.tiles = t;
         this.monsters = m;
         this.items = i;
+        this.particles = new Particle[0];
         this.setTilesDefaultPositions();
     }
 
@@ -127,15 +137,15 @@ public class Maze implements Evolvable {
      * Maze constructor.
      * This is the constructor for the maze class.
      *
-     * @param w The width of the maze (x axis).
-     * @param h The height of the maze (y axis).
-     * @param d The depth of the maze (z axis).
-     * @param t The tiles of the maze.
-     * @param m The monsters of the maze.
-     * @param i The items of the maze.
+     * @param w                 The width of the maze (x axis).
+     * @param h                 The height of the maze (y axis).
+     * @param d                 The depth of the maze (z axis).
+     * @param t                 The tiles of the maze.
+     * @param m                 The monsters of the maze.
+     * @param i                 The items of the maze.
      * @param setTilesPositions Whether to set the tiles positions or not.
      */
-    public Maze(int w, int h, int d, Tile[] t, Monster[] m, Item[] i, boolean setTilesPositions) {
+    public Maze(int w, int h, int d, Tile[] t, Monster[] m, WorldItem[] i, boolean setTilesPositions) {
         if (t.length != w * h * d) {
             throw new IllegalArgumentException("The number of tiles must be equal to width * height * depth.");
         }
@@ -144,6 +154,8 @@ public class Maze implements Evolvable {
         this.depth = d;
         this.monsters = m;
         this.items = i;
+        this.particles = new Particle[0];
+
         if (setTilesPositions) {
             this.tiles = t;
             this.setTilesDefaultPositions();
@@ -157,9 +169,9 @@ public class Maze implements Evolvable {
             for (int j = 0; j < this.tiles.length; j++) {
                 if (this.tiles[j] == null) {
                     this.tiles[j] = new VoidTile(new Vector3(
-                        j % this.width,
-                        j / this.width,
-                        j / (this.width * this.height)));
+                            j % this.width,
+                            j / this.width,
+                            j / (this.width * this.height)));
                 }
             }
         }
@@ -267,8 +279,11 @@ public class Maze implements Evolvable {
                 t.update();
             }
         }
-        for (Item i : this.items) {
+        for (WorldItem i : this.items) {
             i.update();
+        }
+        for (Particle p : this.particles) {
+            p.update();
         }
         if (Game.getInstance().getPlayer() != null) {
             Game.getInstance().getPlayer().update();
@@ -278,9 +293,10 @@ public class Maze implements Evolvable {
     @Override
     public void render() {
         List<Entity> entities = new ArrayList<>();
-        entities.addAll(List.of(this.monsters));
-        entities.addAll(List.of(this.tiles));
-        entities.addAll(List.of(this.items));
+        entities.addAll(Arrays.asList(this.monsters));
+        entities.addAll(Arrays.asList(this.tiles));
+        entities.addAll(Arrays.asList(this.items));
+        entities.addAll(Arrays.asList(this.particles));
         entities.addAll(otherEntities);
         entities.addAll(temporaryEntities);
         if (Game.getInstance().getPlayer() != null) {
@@ -294,7 +310,6 @@ public class Maze implements Evolvable {
                         - GameScene.getObjectDrawingOrder(o2.getPosition());
             }
         });
-
         for (Entity e : entities) {
             e.render();
         }
@@ -313,6 +328,7 @@ public class Maze implements Evolvable {
 
     /**
      * Add a temporary entity to draw on this frame only.
+     *
      * @param e The entity to add.
      */
     public void addTemporaryEntity(Entity e) {
@@ -357,6 +373,7 @@ public class Maze implements Evolvable {
 
     /**
      * Set the tiles of the maze.
+     *
      * @param tiles The tiles of the maze.
      */
     public void setTiles(Tile[] tiles) {
@@ -393,6 +410,7 @@ public class Maze implements Evolvable {
 
     /**
      * Returns the tile index in the tiles array.
+     *
      * @param x The x coordinate.
      * @param y The y coordinate.
      * @param z The z coordinate.
@@ -436,7 +454,7 @@ public class Maze implements Evolvable {
      *
      * @return The items of the maze.
      */
-    public Item[] getItems() {
+    public WorldItem[] getItems() {
         return items;
     }
 
@@ -445,7 +463,7 @@ public class Maze implements Evolvable {
      *
      * @param items The items of the maze.
      */
-    public void setItems(Item[] items) {
+    public void setItems(WorldItem[] items) {
         this.items = items;
     }
 
@@ -501,9 +519,31 @@ public class Maze implements Evolvable {
      *
      * @param i item to remove from the maze.
      */
-    public void removeItem(Item i) {
-        List<Item> itemList = new ArrayList<>(Arrays.asList(this.items));
+    public void removeItem(WorldItem i) {
+        List<WorldItem> itemList = new ArrayList<>(Arrays.asList(this.items));
         itemList.remove(i);
-        this.items = itemList.toArray(new Item[0]);
+        this.items = itemList.toArray(new WorldItem[0]);
+    }
+
+    /**
+     * Add a particle to the maze.
+     *
+     * @param p particle to add to the maze.
+     */
+    public void addParticle(Particle p) {
+        List<Particle> particlesList = new ArrayList<>(Arrays.asList(this.particles));
+        particlesList.add(p);
+        this.particles = particlesList.toArray(new Particle[0]);
+    }
+
+    /**
+     * Removes a particle from the maze.
+     *
+     * @param p particle to remove from the maze.
+     */
+    public void removeParticle(Particle p) {
+        List<Particle> particlesList = new ArrayList<>(Arrays.asList(this.particles));
+        particlesList.remove(p);
+        this.particles = particlesList.toArray(new Particle[0]);
     }
 }
